--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,5 @@
     <color name="list_divider">#272727</color>
     <color name="list_background">#303030</color>
     <color name="list_background_pressed">#9E2518</color>
+    <color name="drawer_item_title">#fff</color>
 </resources>
