--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,7 +10,14 @@
         android:id="@+id/main_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grey_bright"/>
+        android:background="@color/grey_bright">
+
+        <FrameLayout
+            android:id="@+id/lower_action_bar_frame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom" />
+    </FrameLayout>
 
     <!-- Navigation Drawer -->
     <ListView
@@ -22,6 +30,8 @@
         android:divider="@color/list_divider"
         android:background="@color/list_background"
         android:listSelector="@drawable/drawer_selector"/>
+
+    <!-- Bottom ActionBar -->
 
 
 </android.support.v4.widget.DrawerLayout>
